# vianneydubourg.fr

./: .gitignore  ADMIN_TASKS.md  MANIFEST.in  QUICKSTART.md  README.md  app.py  cursorrules.txt  generated-page.html  package.json  pyproject.toml  requirements.txt
backend/: init_db.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py  utils.py
backend/app/routers/: admin.py  articles.py  auth.py  base.py  spots.py
static/js/: admin.js  api.js  app.js  articles-admin.js  comments.js  map.js  spots-admin.js  users-admin.js  utils.js
